# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["cli", "core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/bakkdoor/statistica-verborum-latina"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]

[workspace.dependencies]
anyhow = "*"
chrono = "*"
regex = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_repr = "*"
thiserror = "*"
reqwest = { version = "*" }
tokio = { version = "*", features = ["full", "tracing"] }
