# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["cli", "core", "ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/bakkdoor/statistica-verborum-latina"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]

[workspace.dependencies]
anyhow = "*"
chrono = "*"
cozo = { version = "0.7.5", features = [
  "compact",
  "graph",
  "graph-algo",
  "minimal",
  "rayon",
  "requests",
  "storage-rocksdb",
] }
log = "*"
regex = "*"
reqwest = { version = "*" }
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_repr = "*"
thiserror = "*"
tokio = { version = "*", features = ["full", "tracing"] }
