[package]
name = "svl"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svl-core = { path = "../core" }
clap = { version = "*", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
