[package]
name = "svl"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "*", features = ["derive"] }
cozo.workspace = true
dirs = "*"
prettytable-rs = "*"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
svl-core = { path = "../core" }
svl-ui = { path = "../ui" }
thiserror.workspace = true
tokio.workspace = true
