[package]
name = "svl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozo.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
scraper = "0.18.1"
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
tokio.workspace = true
